# SecureTalk_sever_Linux

./: .clang-format  CMakeLists.txt
data/: user.db
include/: databaseManager.h  logManager.h  logger.h  msgHandler.h  networkManager.h  networkMsg.h
lib/logger/include/: logger.h
lib/logger/src/: logger.cpp
lib/protobuf/: complie_proto_file.sh
lib/protobuf/generated_include/: msg.pb.h  msg_header.pb.h
lib/protobuf/generated_src/: msg.pb.cc  msg_header.pb.cc
lib/protobuf/include/: msg.pb.h  msg_header.pb.h
lib/protobuf/proto_file/: msg.proto  msg_header.proto
lib/protobuf/src/: msg.pb.cc  msg_header.pb.cc
log/: completeDebugLog  completeRuntimeLog  networkLog
src/: databaseManager.cpp  logManager.cpp  logger.cpp  main.cpp  msgHandler.cpp  networkManager.cpp
